fix: small fixed, reduce spacing and gap cy-281

--- a/apps/frontend/src/pages/quiz/questions/components/progress-bar/styles.module.css
+++ b/apps/frontend/src/pages/quiz/questions/components/progress-bar/styles.module.css
@@ -41,9 +41,9 @@
 }
 
 .progress-circle.current {
-	color: white;
-	background-color: var(--color-text-primary);
-	border-color: var(--color-text-primary);
+	color: var(--color-text-primary);
+	background-color: var(--color-bg-white);
+	border-color: var(--color-brand-primary);
 }
 
 .progress-circle.completed {
